--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     html, body { font-family: 'Inter', sans-serif; }
     body {
       /* Replace with your own background image if you like */
-      background-image: url('{{ "/images/background.jpg" | relative_url }}');
+      background-image: url('{{ "/images/background.png" | relative_url }}');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
