--- a/_layouts/philosophy.html
+++ b/_layouts/philosophy.html
@@ -37,7 +37,7 @@ layout: default
   <div id="optionsMenu" class="hidden absolute top-10 right-2 rounded-lg shadow-lg p-4 space-y-2" style="background:var(--reader-bg);color:var(--reader-text)">
     <div class="font-bold">Color Scheme</div>
     <button data-scheme="default" class="block w-full text-left">Default</button>
-    <button data-scheme="light" class="block w-full text-left">Light</button>
+    <button data-scheme="duskrose" class="block w-full text-left">Duskrose</button>
     <button data-scheme="dark" class="block w-full text-left">Dark</button>
     <button data-scheme="blue" class="block w-full text-left">Blue</button>
     <button data-scheme="sepia" class="block w-full text-left">Sepia</button>
