--- a/_layouts/philosophy.html
+++ b/_layouts/philosophy.html
@@ -55,7 +55,7 @@ layout: default
     optsBtn.addEventListener('click', () => optsMenu.classList.toggle('hidden'));
   }
 
-  const colorSchemes = {
+  const schemes = {
   default: { bg: '#192519', text: '#f1e9d2' },         // sdark olive green
   duskrose: { bg: '#3e1f2f', text: '#f6e9e1' },         // deep muted rose/brown-purple
   dark: { bg: '#000000', text: '#ffffff' },             // black and white
