--- a/_layouts/philosophy.html
+++ b/_layouts/philosophy.html
@@ -57,10 +57,10 @@ layout: default
 
   const schemes = {
   default: { bg: '#192519', text: '#f1e9d2' },         // sdark olive green
-  duskrose: { bg: '#3e1f2f', text: '#f6e9e1' },         // deep muted rose/brown-purple
+  duskrose: { bg: '#4a263a', text: '#fbecea' },           // deep muted rose/brown-purple
   dark: { bg: '#000000', text: '#ffffff' },             // black and white
   blue: { bg: '#001f2b', text: '#fdf6e3' },             // deep solarized blue
-  sepia: { bg: '#e7dcc5', text: '#5b4636' }             // slightly dark sepia 
+  sepia: { bg: '#d6c7a4', text: '#3b2f23' }           // slightly dark sepia 
 };
 
 
