--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 
   <!-- Right: Menu Icon -->
   <button class="sm:block">
-    <img src="{{ '/images/Navigation.png' | relative_url }}" alt="Menu" class="h-15 w-auto">
+    <img src="{{ '/images/Navigation.png' | relative_url }}" alt="Menu" class="h-g24_down_1 w-auto">
   </button>
 </header>
 
