--- a/_layouts/philosophy.html
+++ b/_layouts/philosophy.html
@@ -73,7 +73,7 @@ layout: default
 
 <main class="content-box px-6 py-8 mx-auto relative">
   <button id="readerOptions" class="absolute top-2 right-2">
-    <img src="{{ '/images/navigation.png' | relative_url }}" alt="Options" class="w-6 h-6">
+    <img src="{{ '/images/Options.png' | relative_url }}" alt="Options" class="w-6 h-6">
   </button>
   <div class="content-inner">
     {{ content }}
