--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ page.title | default: "Sympnoia" }}</title>
+  <link rel="icon" type="image/png" href="{{ '/images/Favicon.png' | relative_url }}">
 
   <!-- Reading fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
